--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
     <title>Connor DiPietro Capstone</title>
   </head>
   <body>
+    <script src="https://js.stripe.com/v3/"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
